feat(mailer) : setup mailer
